<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_homee"
        android:icon="@drawable/home_ic"
        android:title="@string/home" />
    <item
        android:id="@+id/bottom_offers"
        android:icon="@drawable/ic_search_white_36dp"
        android:title="Search"/>


     <item
        android:id="@+id/bottom_favourite"
        android:icon="@drawable/ic_star_border_white_36dp"
        android:title="@string/favourite" />
    <item
        android:id="@+id/bottom_cart"
        android:icon="@drawable/cart_white"
        android:title="@string/cart" />

    <item
        android:id="@+id/bottom_account"
        android:icon="@drawable/account_icon"
        android:title="@string/account" />

</menu>
